Full JavaDoc added to BasePage (all 35+ methods), BaseComponent (class + all methods), ScenarioContext (class + all methods), ScenarioSoftAssertions (all overloads) — explains dual-wait semantics, root-scoping, PicoContainer lifecycle, and when to use each overload